# Raspberry-Pi-Pico-Soil-Moisture-Driver

./: CMakeLists.txt  README.md  sample.c
moisture_driver/: CMakeLists.txt  moisture.c  moisture.h
